# fuelog-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ci.yml  client.py  codecov.yml  conftest.py  mcp.py  pyproject.toml  test_exceptions.py  test_mcp.py  test_models.py
.github/workflows/: ci.yml  publish.yml
docs/: api.rst  conf.py  exceptions.rst  index.rst  quickstart.rst
fuelog/: __init__.py  client.py  exceptions.py  mcp.py  models.py
tests/: conftest.py  test_client.py  test_mcp.py  test_models.py
