[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fuelog"
dynamic = ["version"]
description = "Python client for the Fuelog fuel tracking API — REST and MCP."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["fuelog", "fuel", "tracking", "api", "client", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
# No required third-party dependencies — uses only the standard library.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.urls]
Homepage       = "https://github.com/fuelog/fuelog-python"
Documentation  = "https://fuelog-python.readthedocs.io"
Repository     = "https://github.com/fuelog/fuelog-python"
"Bug Tracker"  = "https://github.com/fuelog/fuelog-python/issues"
Changelog      = "https://github.com/fuelog/fuelog-python/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatchling version source
# ---------------------------------------------------------------------------

[tool.hatch.version]
path = "fuelog/_version.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -q"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
source  = ["fuelog"]
branch  = true
omit    = ["fuelog/_version.py"]

[tool.coverage.report]
show_missing    = true
skip_covered    = false
fail_under      = 90
exclude_lines   = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py39"
line-length    = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length — handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["fuelog"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version    = "3.9"
strict            = true
warn_return_any   = true
warn_unused_ignores = true
exclude           = ["tests/"]
